--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>spring-reactive-samples</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>spring-webflux-mongodb</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
